[gd_scene load_steps=4 format=3 uid="uid://ec12aj1nj0n0"]

[ext_resource type="Script" path="res://gui/radar/radar.gd" id="1"]
[ext_resource type="Script" path="res://gui/radar/radar_polygon_renderer.gd" id="2"]
[ext_resource type="Script" path="res://gui/radar/radar_segment_renderer.gd" id="3"]

[node name="Radar" type="SubViewportContainer"]
custom_minimum_size = Vector2(128, 96)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -144.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 112.0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1")
metadata/_edit_lock_ = true

[node name="SubViewport" type="SubViewport" parent="."]
disable_3d = true
transparent_bg = true
handle_input_locally = false
gui_disable_input = true
size = Vector2i(128, 96)
render_target_update_mode = 4

[node name="Background" type="CanvasLayer" parent="SubViewport"]

[node name="ColorPolygon" type="Polygon2D" parent="SubViewport/Background"]
color = Color(0.239216, 0.0196078, 0.0941176, 0.501961)
polygon = PackedVector2Array(0, 0, 384, 0, 384, 288, 0, 288)

[node name="Foreground" type="CanvasLayer" parent="SubViewport"]
follow_viewport_enabled = true

[node name="Pits" type="Node2D" parent="SubViewport/Foreground"]
script = ExtResource("2")
color = Color(0.0509804, 0.027451, 0.0352941, 0.501961)

[node name="Floors" type="Node2D" parent="SubViewport/Foreground"]
script = ExtResource("3")
_color = Color(0.0862745, 0.619608, 0.14902, 1)

[node name="VisionAreas" type="Node2D" parent="SubViewport/Foreground"]

[node name="Points" type="Node2D" parent="SubViewport/Foreground"]

[node name="LaserWalls" type="Node2D" parent="SubViewport/Foreground"]

[node name="Walls" type="Node2D" parent="SubViewport/Foreground"]
script = ExtResource("3")
_color = Color(0.560784, 0.980392, 0.215686, 1)

[node name="Camera" type="Camera2D" parent="SubViewport/Foreground"]
zoom = Vector2(0.125, 0.125)
editor_draw_screen = false
